--- a/src/ui/Spinner/Spinner.scss
+++ b/src/ui/Spinner/Spinner.scss
@@ -1,3 +1,20 @@
 .spinner {
-  
+  border: $normal solid $secondary-light;
+  border-top: $normal solid transparent;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  animation: spin 1s linear infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
