Add base grid layout and card styling

--- a/src/styles/_common_vars.scss
+++ b/src/styles/_common_vars.scss
@@ -36,6 +36,8 @@ $large: 8px;
 $extra-large: 16px;
 $extra-large-x2: 32px;
 
+// Border radius
+$rounded-border: 9px;
 
 // Common shadows used
 $card-shadow: 2px 2px 4px $shadow-card;
