Adjust cards for different screens
Add padding for device sizes, add card layout for device screen sized (1 > 2 > 3, from small to xl)

--- a/src/ui/GridContainer/GridContainer.scss
+++ b/src/ui/GridContainer/GridContainer.scss
@@ -4,4 +4,18 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: $extra-large;
+
+  @include small-only {
+    padding: $normal;
+  }
+  @include medium-only {
+    padding: $large;
+  }
+  @include large-only {
+    padding: $large;
+  }
+
+  @include extra-large-only {
+    padding: $large;
+  }
 }
