--- a/src/ui/UserCard/UserCard.scss
+++ b/src/ui/UserCard/UserCard.scss
@@ -1,3 +1,8 @@
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 .user-card-item {
   width: 32%;
 
@@ -47,4 +52,45 @@
     text-align: center;
     font-size: 20px;
   }
+}
+
+
+.description-content {
+  font-weight: 400;
+  color: $secondary-dark;
+  font-size: 16px;
+  margin: 0;
+}
+
+.fill-remaining {
+  margin-bottom: auto;
+}
+
+.hoverable-text {
+  text-decoration: inherit;
+  &:hover {
+    color: $secondary-light;
+  }
+}
+
+.description-container {
+  height: 100%;
+  padding-top: $large;
+  padding-bottom: $extra-large;
+  padding-left: $extra-large-x2;
+  padding-right: $extra-large-x2;
+  @include medium-only {
+    padding: $large;
+  }
+  @include small-only {
+    padding: $normal;
+  }
+}
+
+
+.description-label {
+  font-weight: 600;
+  color: $primary-dark;
+  font-size: 12px;
+  margin: 0;
 }
