--- a/src/ui/DashboardHeader/DashboardHeader.scss
+++ b/src/ui/DashboardHeader/DashboardHeader.scss
@@ -9,10 +9,39 @@
   border-radius: $rounded-border;
   margin-top: $extra-large;
   box-shadow: $card-shadow;
+
+  @include small-only {
+    margin-top: 0;
+    border-radius: 0;
+    flex-direction: column;
+    justify-content: center;
+    position: sticky;
+    top: 50px;
+  }
+
+  @include medium-only {
+    margin-top: 0;
+    border-radius: 0;
+    top: 50px;
+    position: sticky;
+  }
+
+  @include large-only {
+    margin-top: 0;
+    border-radius: 0;
+  }
+
+  @include extra-large-only {
+    border-radius: 0;
+  }
 }
 .header-input {
   flex-grow: 1;
   margin-right: $large;
+  @include small-only {
+    height: 30px;
+    margin-right: 0;
+  }
 }
 
 .header-button-container {
@@ -21,6 +50,10 @@
   margin-left: auto;
   height: 36px;
   align-items: center;
+
+  @include small-only {
+    margin-top: 8px;
+  }
 }
 
 .header-button {
